fixed layout bugs
git-svn-id: http://nt-svn-jira.vdc.csc.com/HPF/Implementation/Source Code@3607 6d9d970a-e046-46de-96ce-fbc9f6c46dd9

--- a/HPF.FutureState/HPF.FutureState.Web/Styles/HPF.css
+++ b/HPF.FutureState/HPF.FutureState.Web/Styles/HPF.css
@@ -59,8 +59,7 @@ p
     font-family: Verdana, Arial, Helvetica, sans-serif;
     color: Black;
     font-size: 10px;
-    
-    padding:0;
+    padding-left:1px;
 }
 .MyButton
 {
